--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     environment:
       POSTGRES_DB: unefa_monitoring_db
       POSTGRES_USER: unefa_user
-      POSTGRES_PASSWORD: secure_password
+      POSTGRES_PASSWORD: 123456
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  
+    ports:
+      - "5433:5432"
+
   redis:
     image: redis:7
     ports:
@@ -26,7 +28,12 @@ services:
       - db
       - redis
     environment:
-      - DATABASE_URL=postgres://unefa_user:secure_password@db:5432/unefa_monitoring_db
+      - POSTGRES_DB=unefa_monitoring_db
+      - POSTGRES_USER=unefa_user
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - DATABASE_URL=postgres://unefa_user:123456@db:5432/unefa_monitoring_db
       - REDIS_URL=redis://redis:6379/0
 
   frontend:
@@ -38,7 +45,7 @@ services:
       - "3000:3000"
     environment:
       - REACT_APP_API_URL=http://localhost:8000/api
-  
+
   huey:
     build: .
     command: >
