feat: Integrate frontend application with updated Docker and project configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,49 @@
-# Variables de entorno mínimas para desarrollo
-SECRET_KEY=replace-me-in-production
+# ==============================================================================
+# SISMEPA - Variables de Entorno
+# ==============================================================================
+# Copiar este archivo a .env y completar los valores
+# IMPORTANTE: Nunca subir el archivo .env al repositorio
+# ==============================================================================
+
+# ------------------------------------------------------------------------------
+# Django - Configuración General
+# ------------------------------------------------------------------------------
+# Clave secreta para Django (generar una única para producción)
+# Puedes generar una con: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+SECRET_KEY=replace-me-in-production-with-a-secure-random-key
+
+# Modo debug (True para desarrollo, False para producción)
 DJANGO_DEBUG=True
 
-# Base de datos Postgres (opcional) - si no se configura, el proyecto puede usar sqlite
+# ------------------------------------------------------------------------------
+# Base de Datos PostgreSQL
+# ------------------------------------------------------------------------------
 POSTGRES_DB=unefa_monitoring_db
 POSTGRES_USER=unefa_user
-POSTGRES_PASSWORD=secure_password
+POSTGRES_PASSWORD=secure_password_change_me
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# SendGrid
+# URL completa de conexión (alternativa a las variables individuales)
+# DATABASE_URL=postgres://unefa_user:secure_password@localhost:5432/unefa_monitoring_db
+
+# ------------------------------------------------------------------------------
+# SendGrid (Envío de Emails) - Opcional
+# ------------------------------------------------------------------------------
+# Obtener API key en: https://sendgrid.com/
 SENDGRID_API_KEY=
 DEFAULT_FROM_EMAIL=no-reply@example.com
 
-# Redis (Huey)
-REDIS_URL=redis://redis:6379/0
+# Umbral para alertas de bajo rendimiento (porcentaje)
+LOW_PERFORMANCE_THRESHOLD=50
+
+# ------------------------------------------------------------------------------
+# Redis (Cola de Tareas Huey) - Opcional
+# ------------------------------------------------------------------------------
+REDIS_URL=redis://localhost:6379/0
+
+# ------------------------------------------------------------------------------
+# Frontend (Vite)
+# ------------------------------------------------------------------------------
+# URL de la API para el frontend (sin trailing slash)
+VITE_API_URL=http://localhost:8000/api
