--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,60 @@
-﻿asgiref==3.10.0
+﻿# ==============================================================================
+# SISMEPA - Dependencias Python
+# ==============================================================================
+# Versión de Python requerida: 3.11+
+# Última actualización: 2025-12-18
+# ==============================================================================
+
+# ------------------------------------------------------------------------------
+# Django y Framework REST
+# ------------------------------------------------------------------------------
 Django==5.2.8
 djangorestframework==3.16.1
-psycopg-binary; sys_platform == 'win32'
-psycopg; sys_platform != 'win32'
-python-dotenv==1.2.1
-sqlparse==0.5.3
-typing_extensions==4.15.0
-tzdata==2025.2
-openpyxl==3.1.2
 django-cors-headers==4.0.0
-sendgrid==6.9.1
-pytest==7.4.0
-pytest-django==4.5.2
-dj-rest-auth==7.0.1
-django-allauth>=0.63.3
-huey==2.2.0
-redis
-python-magic-bin; sys_platform == 'win32'
-python-magic; sys_platform != 'win32'
 django-filter==23.2
+
+# ------------------------------------------------------------------------------
+# Autenticación
+# ------------------------------------------------------------------------------
+dj-rest-auth==7.0.1
+django-allauth==0.63.3
+
+# ------------------------------------------------------------------------------
+# Base de Datos (PostgreSQL)
+# ------------------------------------------------------------------------------
+# psycopg v3 (adaptador PostgreSQL moderno)
+psycopg[binary]==3.2.4; sys_platform == 'win32'
+psycopg==3.2.4; sys_platform != 'win32'
+
+# ------------------------------------------------------------------------------
+# Cola de Tareas Asíncronas (Opcional)
+# ------------------------------------------------------------------------------
+huey==2.5.2
+redis==5.2.1
+
+# ------------------------------------------------------------------------------
+# Envío de Emails
+# ------------------------------------------------------------------------------
+sendgrid==6.11.0
+
+# ------------------------------------------------------------------------------
+# Procesamiento de Archivos
+# ------------------------------------------------------------------------------
+openpyxl==3.1.5
+python-magic-bin==0.4.14; sys_platform == 'win32'
+python-magic==0.4.27; sys_platform != 'win32'
+
+# ------------------------------------------------------------------------------
+# Utilidades
+# ------------------------------------------------------------------------------
+python-dotenv==1.0.1
+asgiref==3.8.1
+sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2024.2
+
+# ------------------------------------------------------------------------------
+# Testing
+# ------------------------------------------------------------------------------
+pytest==8.3.4
+pytest-django==4.9.0
