--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,103 @@
+# ==============================================================================
+# SISMEPA - Git Ignore
+# ==============================================================================
+
+# ------------------------------------------------------------------------------
+# Python
+# ------------------------------------------------------------------------------
 __pycache__/
-.pytest_cache/
-venv/
-.venv/
-db.sqlite3
-sismepa.log
-media/
-node_modules/
-frontend/node_modules/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# ------------------------------------------------------------------------------
+# Entornos Virtuales
+# ------------------------------------------------------------------------------
 .env
 .env.local
-*.pyc
-*.pyo
-*.pyd
+.env.*.local
+venv/
+.venv/
+ENV/
+
+# ------------------------------------------------------------------------------
+# Django
+# ------------------------------------------------------------------------------
+db.sqlite3
+db.sqlite3-journal
+*.log
+sismepa.log
+staticfiles/
+media/
+
+# ------------------------------------------------------------------------------
+# Testing
+# ------------------------------------------------------------------------------
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# ------------------------------------------------------------------------------
+# IDE / Editores
+# ------------------------------------------------------------------------------
+.idea/
+.vscode/
 *.swp
+*.swo
 *~
+.project
+.pydevproject
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# ------------------------------------------------------------------------------
+# OS
+# ------------------------------------------------------------------------------
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ------------------------------------------------------------------------------
+# Node.js / Frontend
+# ------------------------------------------------------------------------------
+node_modules/
+frontend/node_modules/
+frontend/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ------------------------------------------------------------------------------
+# Docker
+# ------------------------------------------------------------------------------
+.docker/
+
+# ------------------------------------------------------------------------------
+# Archivos temporales
+# ------------------------------------------------------------------------------
+*.tmp
+*.temp
+*.bak
