--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,36 @@
+# ==============================================================================
+# SISMEPA Frontend - Git Ignore
+# ==============================================================================
+
+# Dependencias
 node_modules/
+
+# Build
 dist/
-/.venv
+build/
+
+# Variables de entorno (excepto .env.example)
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Cache
+.cache/
+.parcel-cache/
