--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,30 @@
   "type": "module",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .js,.jsx"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "chart.js": "^4.4.0",
-    "lucide-react": "^0.555.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.10.1"
+    "axios": "1.7.9",
+    "chart.js": "4.4.7",
+    "lucide-react": "0.469.0",
+    "react": "18.3.1",
+    "react-chartjs-2": "5.2.0",
+    "react-dom": "18.3.1",
+    "react-router-dom": "7.1.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.7",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17",
+    "vite": "6.0.5"
   }
 }
