--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,3 @@
-VITE_API_URL=http://localhost:8000/api
+# IMPORTANTE: Cuando uses localtunnel, actualiza esta URL con la que te genere el comando 'lt'.
+# Ejemplo: VITE_API_URL=https://tuna-blue-42.loca.lt/api
+VITE_API_URL=https://green-facts-flow.loca.lt/api
