--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,3 @@
-# IMPORTANTE: Cuando uses localtunnel, actualiza esta URL con la que te genere el comando 'lt'.
-# Ejemplo: VITE_API_URL=https://tuna-blue-42.loca.lt/api
-VITE_API_URL=https://green-facts-flow.loca.lt/api
+# URL base de la API del backend
+# Para desarrollo local:
+VITE_API_URL=http://localhost:8000/api
