Add normalization of db, new sidebar function

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,8 @@
-# URL base de la API del backend
-# Para desarrollo local:
+# ==============================================================================
+# SISMEPA Frontend - Variables de Entorno
+# ==============================================================================
+# Copiar este archivo a .env.development o .env.production según el entorno
+# ==============================================================================
+
+# URL base de la API del backend (sin trailing slash)
 VITE_API_URL=http://localhost:8000/api
