--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react": "18.3.1",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.3.1",
-    "react-router-dom": "7.1.1"
+    "react-router-dom": "7.1.1",
+    "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.3.4",
