--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,8 @@ tzdata==2024.2
 # ------------------------------------------------------------------------------
 pytest==8.3.4
 pytest-django==4.9.0
+
+# ------------------------------------------------------------------------------
+# Gemini AI (Asesorías)
+# ------------------------------------------------------------------------------
+google-generativeai==0.8.4
